@@ -1,3 +1,13 @@
+2004-11-21  Michael Koch  <konqueror@gmx.de>
+
+	* java/awt/color/ICC_Profile.java
+	(icSigNamedColorTag): Removed.
+	* java/awt/datatransfer/DataFlavor.java
+	(isMimeTypeEqual): Made final.
+	* java/awt/image/AffineTransformOp.java:
+	Reworked javadocs.
+	(TYPE_BICUBIC): Added @since tag.
+
 2004-11-19  Jerry Quinn  <jlquinn@optonline.net>
 
 	* java/awt/Checkbox.java (AccessibleAWTCheckBox): Remove todo
